src/test/contracts/negative/modules_export_imported.jsligo
type t = int;

const x : t = 42;
